// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <a
    class="item"
    tabindex="0"
  >
    <div>
      A
    </div>
  </a>
</DocumentFragment>
`;

exports[`Render 2 1 1`] = `
<DocumentFragment>
  <a
    class="item"
    tabindex="0"
  >
    <div>
      B
    </div>
  </a>
</DocumentFragment>
`;

exports[`Render 3 1 1`] = `
<DocumentFragment>
  <a
    class="item"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Render 4 1 1`] = `
<DocumentFragment>
  <a
    class="item"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Render 5 1 1`] = `
<DocumentFragment>
  <a
    class="item"
    tabindex="0"
  />
</DocumentFragment>
`;
